# AdGuardDNS_KakaoAdBlock

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  NOTICE.md  README.md  USAGE.md  kakao-adblock-filter.txt  kakao-adblock-production.txt  pyproject.toml  requirements-dev.txt
.claude/: 01-sequential-thinking  02-general-rules  03-research-search  04-task-management  05-git-workflow  06-automation  07-code-quality  08-documentation  09-self-critical-thinking  10-universal-enforcement
.claude/agents/: accessibility-color-validator.md  api-naming-validator.md  auth-flow-enforcer.md  automation-capture-specialist.md  automation-tooling-specialist.md  best-practices-enforcer.md  ci-cd-specialist.md  code-block-formatter.md  code-block-syntax-validator.md  code-modification-specialist.md  code-search-specialist.md  concise-writing-enforcer.md  db-migration-strategist.md  db-naming-governor.md  db-schema-quality-enforcer.md  development-expert.md  docker-compose-expert.md  docker-dev-env-specialist.md  dockerfile-expert.md  document-generalization-validator.md  documentation-specialist.md  e2e-orchestrator.md  file-operation-guardian.md  file-type-linter.md  git-workflow-expert.md  html-linting-enforcer.md  i18n-architect.md  i18n-integrator.md  implementation-specialist.md  language-detector.md  linter-enforcer.md  markdown-structure-validator.md  (+26 more)
docs/: 404.html  README.md  index.html  manifest.json  robots.txt  sitemap.xml
scripts/: collect_kakao_domains.py  dns_validator.py  sources.json  update-domains.sh  validate_domains.py
tests/: test_dns_validator.py
(+4 files in other folders)
