[project]
name = "adguard-kakao-adblock"
version = "0.1.0"
description = "Precision AdGuard DNS filter for blocking only Kakao/Daum advertising domains"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [
    { name = "SeongHo Bae", email = "me@seonghobae.me" }
]
keywords = ["adguard", "dns", "filter", "kakao", "daum", "adblock", "korean"]

dependencies = [
    "dnspython>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/seonghobae/AdGuardDNS_KakaoAdBlock"
Documentation = "https://seonghobae.github.io/AdGuardDNS_KakaoAdBlock/"
Issues = "https://github.com/seonghobae/AdGuardDNS_KakaoAdBlock/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long

[tool.ruff.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports and redefinitions in tests